--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Daniel's site</title>
-    <link rel="stylesheet" href="/Users/danielpavlov/Desktop/CSS - My Site/css/styles.css">
-    <link rel="icon" href="/Users/danielpavlov/Desktop/CSS - My Site/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
